--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.10.7",
+    "@react-navigation/drawer": "^5.10.7",
     "@react-navigation/native": "^5.8.7",
     "@react-navigation/stack": "^5.12.4",
     "expo": "~39.0.2",
